--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "s0um0r0y/s0um0r0y.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "240999 (1).jpg"
   name             : "Soumo Roy"
   pronouns         : # example: "she/her"  
   bio              : "Robotics engineer"
