confrence name changes

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "240999 (1).jpg"
   name             : "Soumo Roy"
   pronouns         : # example: "she/her"  
-  bio              : "Robotics engineer"
-  location         : "Vellore"
+  bio              : "Robotics and AI"
+  location         : "Vellore,India"
   employer         : "VIT Vellore"
   uri              : # URL
   email            : "soumoroy09@gmail.com" 
