--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,8 @@
 
 main:
   - title: "Publications"
-    url: /publications/
+    # url: /publications/
+    url: https://scholar.google.com/citations?user=j1RNdMsAAAAJ&hl=en&oi=ao
 
   # - title: "Talks"
   #   url: /talks/    
